<resources>
    <string name="app_name">Fieldnode</string>
    <string name="grant_all_files_access">Grant all-files access</string>
    <string name="run_self_test">Run file-engine self-test</string>
    <string name="open_file_browser">Open file browser</string>
    <string name="canary_start">Start survival canary</string>
    <string name="canary_stop">Stop canary</string>
    <string name="canary_refresh">Refresh heartbeat</string>
    <string name="open_captures">Captures</string>
    <string name="capture_note_hint">Quick note…</string>
    <string name="capture_button">Capture</string>
    <string name="captures_empty">No captures yet. Share text/an image to Fieldnode, or type a note above.</string>
    <string name="dispatch_button">Dispatch to fleet</string>
    <string name="notify_start">Start fleet listener</string>
    <string name="notify_stop">Stop fleet listener</string>
    <string name="open_nearby">Leads near me</string>
    <string name="nearby_find">Find leads near me</string>
    <string name="nearby_hint">Surfaces engcrm leads near your current location.</string>
    <string name="nearby_route">Route</string>
    <string name="open_agent">Talk to Fieldnode</string>
    <string name="agent_hint">Ask Fieldnode to do something…</string>
    <string name="agent_send">Send</string>
    <string name="agent_voice">🎤</string>
    <string name="open_sessions">☰ Sessions</string>
    <string name="new_session">+ New session</string>
    <string name="sessions_header">Sessions</string>
    <string name="session_rename">Rename</string>
    <string name="session_delete">Delete</string>
    <string name="session_delete_confirm">Archive this session? You can restore it later.</string>
    <string name="browser_up">Up</string>
    <string name="browser_new_file">New file</string>
    <string name="browser_new_folder">New folder</string>
    <string name="browser_trash">Trash</string>
    <string name="browser_log">Log</string>
</resources>
